# umc

./: .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  LICENSE  README.md  bump.config.ts  changelogithub.config.ts  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr.yml  release.yml  reusable-release-napi.yml  tag.yml
benchmark/: Cargo.toml
benchmark/benches/: html_benchmark.rs
benchmark/src/: lib.rs
core/umc_ast/: Cargo.toml  README.md
core/umc_ast/src/: lib.rs
core/umc_parser/: Cargo.toml  README.md
core/umc_parser/src/: lib.rs  source.rs  token.rs
core/umc_span/: Cargo.toml  README.md
core/umc_span/src/: lib.rs
core/umc_traverse/: Cargo.toml
core/umc_traverse/src/: lib.rs
crates/umc_allocator/: Cargo.toml
crates/umc_allocator/src/: lib.rs
crates/umc_ast/: Cargo.toml
crates/umc_ast/src/: lib.rs
crates/umc_parser/: Cargo.toml
crates/umc_parser/src/: char.rs  filename.rs  lib.rs  source.rs  token.rs
crates/umc_parser/src/html/: mod.rs
crates/umc_parser/src/html/lexer/: kind.rs  mod.rs
crates/umc_parser/src/html5/: mod.rs
crates/umc_parser/src/html5/lexer/: kind.rs  lexe.rs  mod.rs  source.rs  state.rs  token.rs
crates/umc_parser/src/html5/lexer/snapshots/: umc_parser__html5__lexer__lexe__test__after_tag_name_should_return_error.snap  umc_parser__html5__lexer__lexe__test__after_tag_name_should_work.snap  umc_parser__html5__lexer__test__get_tokens.snap  umc_parser__html5__lexer__test__process_embedded_content.snap  umc_parser__html5__lexer__test__self_close_script_tag.snap
crates/umc_span/: Cargo.toml
crates/umc_span/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
languages/html/umc_html_ast/: Cargo.toml  README.md
languages/html/umc_html_ast/src/: lib.rs
languages/html/umc_html_parser/: Cargo.toml  README.md
languages/html/umc_html_parser/src/: lib.rs  parse.rs
languages/html/umc_html_parser/src/implement/: mod.rs
languages/html/umc_html_parser/src/implement/snapshots/: umc_html__implement__test__basic_html.snap  umc_html__implement__test__comments.snap  umc_html__implement__test__error_recovery_orphan_closing.snap  umc_html__implement__test__error_recovery_unclosed.snap  umc_html__implement__test__nested_elements.snap  umc_html__implement__test__self_closing_elements.snap
languages/html/umc_html_parser/src/lexer/: kind.rs  lexe.rs  mod.rs  source.rs  state.rs
languages/html/umc_html_parser/src/lexer/snapshots/: umc_html__lexer__lexe__test__after_tag_name_should_return_error.snap  umc_html__lexer__lexe__test__after_tag_name_should_work.snap  umc_html__lexer__test__get_tokens.snap  umc_html__lexer__test__no_complete_comment.snap  umc_html__lexer__test__no_complete_doctype.snap  umc_html__lexer__test__process_embedded_content.snap  umc_html__lexer__test__self_close_script_tag.snap  umc_html_parser__lexer__test__no_closing_tag_for_embedded_content.snap  umc_html_parser__lexer__test__no_string_end.snap  umc_html_parser__lexer__test__self_close_script_tag.snap
languages/html/umc_html_parser/src/snapshots/: umc_html__parse__test__attribute_with_whitespaces.snap  umc_html__parse__test__basic_html.snap  umc_html__parse__test__comments.snap  umc_html__parse__test__error_recovery_orphan_closing.snap  umc_html__parse__test__error_recovery_unclosed.snap  umc_html__parse__test__multiple_no_value_attributes.snap  umc_html__parse__test__nested_elements.snap  umc_html__parse__test__self_closing_elements.snap  umc_html__parse__test__void_elements.snap  umc_html_parser__parse__test__comments.snap  umc_html_parser__parse__test__incomplete_attribute.snap  umc_html_parser__parse__test__no_closing_tag.snap  umc_html_parser__parse__test__script_parsing.snap  umc_html_parser__parse__test__script_parsing_error.snap  umc_html_parser__parse__test__script_with_invalid_type.snap  umc_html_parser__parse__test__script_with_src.snap  umc_html_parser__parse__test__self_close_script.snap  umc_html_parser__parse__test__self_close_tags.snap  umc_html_parser__parse__test__void_elements.snap
languages/html/umc_html_traverse/: Cargo.toml  README.md
languages/html/umc_html_traverse/src/: lib.rs
napi/umc_parser/: Cargo.toml  browser.js  index.js  package.json  simple-test.js  umc_parser.darwin-arm64.node  umc_parser.wasi-browser.js  umc_parser.wasi.cjs  wasi-worker-browser.mjs
scripts/: check-version.ts  package.json
