[workspace]
resolver = "3"
members = ["benchmark", "core/*", "languages/*/*", "packages/*"]

[workspace.package]
version = "0.0.0" # Unified packages version
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
categories = ["compilers", "development-tools", "web-programming"]
keywords = ["UMC", "parser", "HTML", "AST"]
license = "MIT"
repository = "https://github.com/liangmiQwQ/umc"
description = "The Universal Markup-language Compiler, Rust-based."

edition = "2024"
rust-version = "1.89.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.metadata.cargo-shear]
ignored = ["napi"]

[workspace.dependencies]
napi = "3.7.1"
napi-build = "2"
napi-derive = "3.4.1"

oxc_allocator = "0.104.0"
oxc_diagnostics = "0.104.0"
oxc_parser = "0.104.0"

memchr = "2.7.6"
miette = { package = "oxc-miette", version = "2.6.0", features = ["fancy-no-syscall"] }

criterion = "0.8.1"
insta = "1.45.0"
reqwest = "0.12.26"
tokio = "1.48.0"

# umc_ast = { version = "0.0.0-alpha.14", path = "core/umc_ast" }
umc_parser = { version = "0.0.0-alpha.14", path = "core/umc_parser" }
umc_span = { version = "0.0.0-alpha.14", path = "core/umc_span" }

umc_html_ast = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_ast" }
umc_html_parser = { version = "0.0.0-alpha.14", path = "languages/html/umc_html_parser" }
