[package]
name = "umc_benchmark"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]

[[bench]]
name = "html_benchmark"
harness = false

[dev-dependencies]
criterion = { workspace = true }
oxc_allocator = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
umc_html_parser = { workspace = true }
umc_parser = { workspace = true }
