[package]
name = "example"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
oxc_allocator = "0.106.0"
umc_html_ast = { version = "0.0.0", path = "../languages/html/umc_html_ast" }
umc_html_parser = { version = "0.0.0", path = "../languages/html/umc_html_parser" }
umc_html_traverse = { version = "0.0.0", path = "../languages/html/umc_html_traverse" }
umc_parser = { version = "0.0.0", path = "../core/umc_parser" }
umc_traverse = { version = "0.0.0", path = "../core/umc_traverse" }

[lints]
workspace = true
