[package]
name = "umc_span"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
miette = { workspace = true }
oxc_allocator = { workspace = true }

[lints]
workspace = true
