[package]
name = "umc_parser"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_diagnostics = { workspace = true }

memchr = { workspace = true }
umc_span = { workspace = true }
