[package]
name = "umc_parser_napi"
version = "0.0.0-alpha.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
include = ["/src", "build.rs"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[package.metadata]
cargo-shear.ignored = ["napi"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"
