[package]
name = "umc_html_traverse"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
umc_html_ast = { workspace = true }
umc_traverse = { workspace = true }

[lints]
workspace = true
